# chatgpt-on-wechat

./: .gitignore  README.md  app.py  config-template.json  config.py  pyproject.toml  requirements-optional.txt  requirements.txt  run.sh
.cow/: AGENT.md  RULE.md
.cow/memory/long-term/: index.db  index.db-shm  index.db-wal
.cow/skills/: skills_config.json
agent/tools/scheduler/: scheduler_service.py
channel/dingtalk/: dingtalk_channel.py
channel/feishu/: README.md  feishu_channel.py
channel/web/: web_channel.py
cli/commands/: install.py
docker/: Dockerfile.latest
docs/channels/: dingtalk.mdx  feishu.mdx
docs/commands/: process.mdx
docs/en/channels/: dingtalk.mdx  feishu.mdx
docs/en/guide/: manual-install.mdx
docs/guide/: manual-install.mdx  upgrade.mdx
docs/ja/guide/: manual-install.mdx
docs/tools/: browser.mdx
scripts/: start.sh
